[package]
name = "tg_pipe"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.14"
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }

sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
teloxide = { version = "0.12.2", features = ["rustls"] }
openai = { version = "1.0.0-alpha.8", features = ["reqwest", "rustls"] }
clap = { version = "4.2.5", features = ["derive"] }


